# tp-algo

./: README.md
ДЗ1/task1/: CMakeLists.txt  main.cpp
ДЗ1/task2/: CMakeLists.txt  main.cpp  testgen.py  testresult.txt  testrun.py
ДЗ1/task3/: CMakeLists.txt  main.cpp
ДЗ1/task4/: CMakeLists.txt  main.cpp
ДЗ1/task5/: CMakeLists.txt  main.cpp
ДЗ1/task6/: CMakeLists.txt  main.cpp
ДЗ1/task7/: CMakeLists.txt  main.cpp  main_almost.cpp  main_backup.cpp  main_optimized_backup.cpp  testgen.py
ДЗ2/task1/: main.cpp  q
ДЗ2/task2/: CMakeLists.txt  main.cpp
ДЗ2/task3/: CMakeLists.txt  main.cpp
ДЗ2/task4/: CMakeLists.txt  main.cpp
ДЗ3/task1/: CArcGraph.cpp  CArcGraph.h  CListGraph.cpp  CListGraph.h  CMakeLists.txt  CMatrixGraph.cpp  CMatrixGraph.h  CSetGraph.cpp  CSetGraph.h  IGraph.h  main.cpp
ДЗ3/task2/: CMakeLists.txt  main.cpp
ДЗ3/task3/: CMakeLists.txt  main.cpp
